k8s/gosty-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosty-worker
  namespace: gosty
  labels:
    app: gosty-worker
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: gosty-worker
  template:
    metadata:
      labels:
        app: gosty-worker
    spec:
      containers:
        - name: gosty-worker
          image: 10.109.191.7/gosty-worker:latest
          imagePullPolicy: Always

          livenessProbe:
            httpGet:
              path: /live
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 1

          readinessProbe:
            httpGet:
              path: /ready
              port: 8002
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
