k8s/gosty-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosty-apiserver
  namespace: gosty
  labels:
    app: gosty-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gosty-apiserver
  template:
    metadata:
      labels:
        app: gosty-apiserver
    spec:
      containers:
        - name: gosty-apiserver
          image: localhost:5000/gosty-apiserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gosty-apiserver
  namespace: gosty
spec:
  type: NodePort
  selector:
    app: gosty-apiserver
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30800
